# x-ray-imager

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  identify-lines.md  index.md  requirements.txt  response-interpolation.md
docs/identify-lines/: cli.md  cluster.md  identify.md  index.md  plot.md  source.md
docs/position-estimation/: cli.md  estimators.md  index.md  plot.md
docs/response-interpolation/: cli.md  index.md  interpolate.md  plot.md
nn_calibration/: README.md  __init__.py  __main__.py  cluster.py  cluster_params.yaml  interpolate.py  lookup.py  pca.py  plot.py  plot_style.mplstyle  requirements.txt  sidecars.py
nn_calibration/tests/: test_cluster.py
src/x_ray_imager_bagriff/: __init__.py  cli.py  plot_style.mplstyle
src/x_ray_imager_bagriff/identify_lines/: __init__.py  _cli.py  _cluster.py  _identify.py  _plot.py  _sources.py  plot.py
src/x_ray_imager_bagriff/position_estimation/: __init__.py  _anger.py  _cli.py  _estimator.py  _lookup.py  plot.py
src/x_ray_imager_bagriff/response_interpolation/: __init__.py  _cli.py  _interpolate.py  pca.py  plot.py
tests/identify_lines/: test_cluster.py  test_identify.py  test_identify_cli.py  test_identify_plot.py  test_plot.py  test_sources.py
tests/position_estimation/: test_anger.py  test_base_estimator.py  test_lookup.py  test_plot.py
tests/response_interpolation/: test_interpolate.py  test_interpolate_cli.py  test_interpolate_plot.py  test_pca.py
