[project]
name = "x_ray_imager_bagriff"
version = "0.1.1"
authors = [
  { name="Brady Griffith", email="bagriff@uw.edu" },
]
description = "Tools to estimate position for an x-ray imager."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "click>=8.3.3",
  "cycler>=0.12.1",
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "pandas>=3.0.2",
  "pytest>=9.0.2",
  "pyYAML>=6.0.3",
  "scipy>=1.17.1",
  "scikit-learn>=1.8.0",
  "xraydb>=4.5.8"
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/bagriffith/x-ray-imager"
Issues = "https://github.com/bagriffith/x-ray-imager/issues"

[project.scripts]
identify-lines = "x_ray_imager_bagriff.identify_lines._cli:cli"
response-interpolation = "x_ray_imager_bagriff.response_interpolation._cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
x_ray_imager_bagriff = ["*.mplstyle"]

